[SECD-441] Add init repo updates and add initial interfaces
